--- a/index.html
+++ b/index.html
@@ -291,37 +291,148 @@
           <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
           <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
           <ul class="values">
+  <!-- Sourire & pédagogie : petit personnage qui fait coucou -->
   <li data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--smile" aria-hidden="true" focusable="false">
-        <use href="#ic-smile"></use>
+    <span class="icon-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
+        <!-- halo -->
+        <circle cx="16" cy="16" r="15" fill="#facc15" opacity="0.18" />
+        <!-- tête -->
+        <circle cx="12" cy="11" r="5" fill="#fde68a" />
+        <!-- yeux -->
+        <circle cx="10.5" cy="10.5" r="0.7" fill="#111827" />
+        <circle cx="13.5" cy="10.5" r="0.7" fill="#111827" />
+        <!-- sourire -->
+        <path d="M10 12.5 Q12 14 14 12.5"
+              stroke="#111827" stroke-width="0.8"
+              stroke-linecap="round" fill="none" />
+        <!-- corps -->
+        <path d="M8.5 17.5 Q12 15.5 15.5 17.5 L15.5 21.5 L8.5 21.5Z"
+              fill="#111827" />
+        <!-- bras gauche -->
+        <path d="M8.5 14.5 Q6.5 15.5 6 17"
+              stroke="#fde68a" stroke-width="1.5" stroke-linecap="round" />
+        <!-- bras droit qui fait coucou -->
+        <g>
+          <path d="M14.5 14.5 Q17 13 19 11"
+                stroke="#fde68a" stroke-width="1.6" stroke-linecap="round" />
+          <circle cx="19.3" cy="10.7" r="1.4" fill="#fde68a" />
+          <animateTransform
+            attributeName="transform"
+            type="rotate"
+            values="0 14.5 14.5; -18 14.5 14.5; 10 14.5 14.5; 0 14.5 14.5"
+            dur="2.4s"
+            repeatCount="indefinite" />
+        </g>
+        <!-- petite étoile qui pulse -->
+        <g>
+          <circle cx="20.5" cy="6.5" r="1.4" fill="#facc15">
+            <animateTransform
+              attributeName="transform"
+              type="scale"
+              values="1;1.3;1"
+              dur="1.8s"
+              repeatCount="indefinite" />
+          </circle>
+        </g>
       </svg>
     </span>
     Sourire & pédagogie
   </li>
 
+  <!-- Ponctualité & fiabilité : horloge qui tourne -->
   <li data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--clock" aria-hidden="true" focusable="false">
-        <use href="#ic-clock"></use>
+    <span class="icon-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
+        <circle cx="16" cy="16" r="13" fill="#020617" stroke="#e5e7eb" stroke-width="1.4" />
+        <circle cx="16" cy="16" r="10" fill="#020617" stroke="#4b5563" stroke-width="1.1" />
+        <!-- quarts -->
+        <g stroke="#4b5563" stroke-linecap="round" stroke-width="1">
+          <line x1="16" y1="6"  x2="16" y2="8" />
+          <line x1="16" y1="24" x2="16" y2="26" />
+          <line x1="6"  y1="16" x2="8"  y2="16" />
+          <line x1="24" y1="16" x2="26" y2="16" />
+        </g>
+        <!-- aiguille heure -->
+        <line x1="16" y1="16" x2="16" y2="10"
+              stroke="#e5e7eb" stroke-width="1.3" stroke-linecap="round" />
+        <!-- aiguille minute animée -->
+        <line x1="16" y1="16" x2="22" y2="16"
+              stroke="#f97316" stroke-width="1.3" stroke-linecap="round">
+          <animateTransform
+            attributeName="transform"
+            type="rotate"
+            from="0 16 16"
+            to="360 16 16"
+            dur="6s"
+            repeatCount="indefinite" />
+        </line>
+        <circle cx="16" cy="16" r="1.3" fill="#facc15" />
       </svg>
     </span>
     Ponctualité & fiabilité
   </li>
 
+  <!-- Adaptabilité & clarté : pièce de puzzle qui flotte -->
   <li data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--puzzle" aria-hidden="true" focusable="false">
-        <use href="#ic-puzzle"></use>
+    <span class="icon-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
+        <!-- fond carré -->
+        <rect x="5" y="8" width="18" height="18" rx="4"
+              fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
+        <circle cx="12" cy="13" r="2" fill="#111827" />
+        <!-- pièce qui flotte -->
+        <g>
+          <path
+            d="M17 7 h7 a2.5 2.5 0 0 1 2.5 2.5 v6
+               a2.5 2.5 0 0 1 -2.5 2.5 h-4
+               a2 2 0 1 0 0 3 h-2
+               a2.5 2.5 0 0 1 -2.5 -2.5 v-6
+               a2.5 2.5 0 0 1 2.5 -2.5 z"
+            fill="#ec4899" />
+          <animateTransform
+            attributeName="transform"
+            type="translate"
+            values="0 0; 0 -2; 0 0"
+            dur="2.4s"
+            repeatCount="indefinite" />
+        </g>
       </svg>
     </span>
     Adaptabilité & clarté
   </li>
 
+  <!-- Transparence & sécurité : bouclier qui brille -->
   <li data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--shield" aria-hidden="true" focusable="false">
-        <use href="#ic-shield"></use>
+    <span class="icon-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
+        <path
+          d="M16 4 L8 7.5 V17
+             C8 22 11.5 26 16 28
+             C20.5 26 24 22 24 17
+             V7.5 Z"
+          fill="#020617" stroke="#e5e7eb" stroke-width="1.3" />
+        <!-- check -->
+        <path d="M12 16 L15 19 L20 13"
+              stroke="#22c55e" stroke-width="1.6"
+              stroke-linecap="round" stroke-linejoin="round" />
+        <!-- reflet animé -->
+        <path
+          d="M10 9 Q16 7.5 22 9"
+          stroke="#facc15" stroke-width="1.2"
+          stroke-linecap="round">
+          <animate
+            attributeName="opacity"
+            values="0;1;0"
+            dur="2.6s"
+            repeatCount="indefinite" />
+          <animateTransform
+            attributeName="transform"
+            type="translate"
+            values="-2 0; 2 0; -2 0"
+            dur="2.6s"
+            repeatCount="indefinite" />
+        </path>
       </svg>
     </span>
     Transparence & sécurité
