--- a/index.html
+++ b/index.html
@@ -291,74 +291,65 @@
           <p class="lead">Suite à mon intervention, assistance, réparation ou dépannage, je souhaite que vous ayez le sentiment que l’informatique vous facilite la vie et vous aide au quotidien.</p>
           <p class="lead">Je prends le temps de vous expliquer et de vous former afin que vous puissiez vous sentir à l'aise avec l'informatique.</p>
           <ul class="values">
-  <!-- Sourire & pédagogie : petit personnage qui fait coucou -->
+  <!-- Sourire & pédagogie -->
   <li data-magnet>
-    <span class="icon-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
-        <!-- halo -->
-        <circle cx="16" cy="16" r="15" fill="#facc15" opacity="0.18" />
-        <!-- tête -->
-        <circle cx="12" cy="11" r="5" fill="#fde68a" />
-        <!-- yeux -->
-        <circle cx="10.5" cy="10.5" r="0.7" fill="#111827" />
-        <circle cx="13.5" cy="10.5" r="0.7" fill="#111827" />
-        <!-- sourire -->
-        <path d="M10 12.5 Q12 14 14 12.5"
-              stroke="#111827" stroke-width="0.8"
+    <span class="ic-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+        <!-- petit tableau -->
+        <rect x="16" y="7" width="10" height="7" rx="1.5"
+              fill="#020617" stroke="#e5e7eb" stroke-width="1" />
+        <line x1="17" y1="10" x2="25" y2="10"
+              stroke="#facc15" stroke-width="1" stroke-linecap="round" />
+        <line x1="18" y1="12" x2="23" y2="12"
+              stroke="#ec4899" stroke-width="0.9" stroke-linecap="round" />
+
+        <!-- personnage -->
+        <circle cx="10.5" cy="11" r="4.1" fill="#fde68a" />
+        <circle cx="9.3" cy="10.3" r="0.7" fill="#111827" />
+        <circle cx="11.7" cy="10.3" r="0.7" fill="#111827" />
+        <path d="M9 12 Q10.5 13.3 12 12"
+              stroke="#111827" stroke-width="0.7"
               stroke-linecap="round" fill="none" />
-        <!-- corps -->
-        <path d="M8.5 17.5 Q12 15.5 15.5 17.5 L15.5 21.5 L8.5 21.5Z"
+        <path d="M6.5 18 Q10.5 16 14.5 18 L14.5 22 L6.5 22 Z"
               fill="#111827" />
-        <!-- bras gauche -->
-        <path d="M8.5 14.5 Q6.5 15.5 6 17"
-              stroke="#fde68a" stroke-width="1.5" stroke-linecap="round" />
-        <!-- bras droit qui fait coucou -->
+
+        <!-- bras qui explique le tableau -->
         <g>
-          <path d="M14.5 14.5 Q17 13 19 11"
-                stroke="#fde68a" stroke-width="1.6" stroke-linecap="round" />
-          <circle cx="19.3" cy="10.7" r="1.4" fill="#fde68a" />
+          <path d="M12 13.5 Q15 13 16.2 13"
+                stroke="#fde68a" stroke-width="1.2" stroke-linecap="round" />
           <animateTransform
             attributeName="transform"
             type="rotate"
-            values="0 14.5 14.5; -18 14.5 14.5; 10 14.5 14.5; 0 14.5 14.5"
+            values="0 11.5 13.5; -10 11.5 13.5; 0 11.5 13.5"
             dur="2.4s"
             repeatCount="indefinite" />
-        </g>
-        <!-- petite étoile qui pulse -->
-        <g>
-          <circle cx="20.5" cy="6.5" r="1.4" fill="#facc15">
-            <animateTransform
-              attributeName="transform"
-              type="scale"
-              values="1;1.3;1"
-              dur="1.8s"
-              repeatCount="indefinite" />
-          </circle>
         </g>
       </svg>
     </span>
     Sourire & pédagogie
   </li>
 
-  <!-- Ponctualité & fiabilité : horloge qui tourne -->
+  <!-- Ponctualité & fiabilité -->
   <li data-magnet>
-    <span class="icon-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
-        <circle cx="16" cy="16" r="13" fill="#020617" stroke="#e5e7eb" stroke-width="1.4" />
-        <circle cx="16" cy="16" r="10" fill="#020617" stroke="#4b5563" stroke-width="1.1" />
+    <span class="ic-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+        <circle cx="16" cy="16" r="7.8"
+                fill="#020617" stroke="#e5e7eb" stroke-width="1.1" />
+        <circle cx="16" cy="16" r="6"
+                fill="#020617" stroke="#4b5563" stroke-width="0.9" />
         <!-- quarts -->
-        <g stroke="#4b5563" stroke-linecap="round" stroke-width="1">
-          <line x1="16" y1="6"  x2="16" y2="8" />
-          <line x1="16" y1="24" x2="16" y2="26" />
-          <line x1="6"  y1="16" x2="8"  y2="16" />
-          <line x1="24" y1="16" x2="26" y2="16" />
+        <g stroke="#4b5563" stroke-linecap="round" stroke-width="0.8">
+          <line x1="16" y1="9.5" x2="16" y2="10.7" />
+          <line x1="16" y1="21.3" x2="16" y2="22.5" />
+          <line x1="9.5" y1="16" x2="10.7" y2="16" />
+          <line x1="21.3" y1="16" x2="22.5" y2="16" />
         </g>
         <!-- aiguille heure -->
-        <line x1="16" y1="16" x2="16" y2="10"
-              stroke="#e5e7eb" stroke-width="1.3" stroke-linecap="round" />
+        <line x1="16" y1="16" x2="16" y2="11.5"
+              stroke="#e5e7eb" stroke-width="0.9" stroke-linecap="round" />
         <!-- aiguille minute animée -->
-        <line x1="16" y1="16" x2="22" y2="16"
-              stroke="#f97316" stroke-width="1.3" stroke-linecap="round">
+        <line x1="16" y1="16" x2="20.5" y2="16"
+              stroke="#f97316" stroke-width="0.9" stroke-linecap="round">
           <animateTransform
             attributeName="transform"
             type="rotate"
@@ -367,70 +358,82 @@
             dur="6s"
             repeatCount="indefinite" />
         </line>
-        <circle cx="16" cy="16" r="1.3" fill="#facc15" />
+        <circle cx="16" cy="16" r="0.9" fill="#facc15" />
+        <!-- coche fiabilité -->
+        <path d="M19.5 19.5 L21 21 L23.5 18"
+              stroke="#22c55e" stroke-width="1.2"
+              stroke-linecap="round" stroke-linejoin="round" />
       </svg>
     </span>
     Ponctualité & fiabilité
   </li>
 
-  <!-- Adaptabilité & clarté : pièce de puzzle qui flotte -->
+  <!-- Adaptabilité & clarté -->
   <li data-magnet>
-    <span class="icon-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
-        <!-- fond carré -->
-        <rect x="5" y="8" width="18" height="18" rx="4"
-              fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
-        <circle cx="12" cy="13" r="2" fill="#111827" />
-        <!-- pièce qui flotte -->
+    <span class="ic-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+        <!-- ampoule -->
         <g>
-          <path
-            d="M17 7 h7 a2.5 2.5 0 0 1 2.5 2.5 v6
-               a2.5 2.5 0 0 1 -2.5 2.5 h-4
-               a2 2 0 1 0 0 3 h-2
-               a2.5 2.5 0 0 1 -2.5 -2.5 v-6
-               a2.5 2.5 0 0 1 2.5 -2.5 z"
-            fill="#ec4899" />
-          <animateTransform
-            attributeName="transform"
-            type="translate"
-            values="0 0; 0 -2; 0 0"
-            dur="2.4s"
+          <circle cx="12" cy="12" r="3.8" fill="#facc15" />
+          <rect x="11" y="15" width="2" height="3.4" rx="0.8" fill="#111827" />
+          <rect x="10.4" y="18.4" width="3.2" height="1.4" rx="0.7" fill="#111827" />
+          <!-- petites rayons -->
+          <g stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
+            <line x1="12" y1="7.2" x2="12" y2="6" />
+            <line x1="8.8" y1="8.2" x2="8" y2="7.2" />
+            <line x1="15.2" y1="8.2" x2="16" y2="7.2" />
+          </g>
+          <animate
+            attributeName="opacity"
+            values="0.7;1;0.7"
+            dur="2s"
             repeatCount="indefinite" />
+        </g>
+        <!-- flèches d’adaptation -->
+        <g stroke="#ec4899" stroke-width="1.1" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M18 10 H23 Q25 10 25 12 V13.5" fill="none" />
+          <path d="M23 13.5 L25 15.5 L27 13.5" fill="none" />
+          <path d="M24 19 H19 Q17 19 17 17.2 V16" fill="none" />
+          <path d="M19 16 L17 14 L15 16" fill="none" />
         </g>
       </svg>
     </span>
     Adaptabilité & clarté
   </li>
 
-  <!-- Transparence & sécurité : bouclier qui brille -->
+  <!-- Transparence & sécurité -->
   <li data-magnet>
-    <span class="icon-badge">
-      <svg viewBox="0 0 32 32" aria-hidden="true" class="icon-svg">
+    <span class="ic-badge">
+      <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+        <!-- bouclier -->
         <path
-          d="M16 4 L8 7.5 V17
-             C8 22 11.5 26 16 28
-             C20.5 26 24 22 24 17
-             V7.5 Z"
-          fill="#020617" stroke="#e5e7eb" stroke-width="1.3" />
-        <!-- check -->
-        <path d="M12 16 L15 19 L20 13"
-              stroke="#22c55e" stroke-width="1.6"
-              stroke-linecap="round" stroke-linejoin="round" />
-        <!-- reflet animé -->
+          d="M16 5.5 L9.5 8.3 V16
+             C9.5 20.7 12.3 24.5 16 26.4
+             C19.7 24.5 22.5 20.7 22.5 16
+             V8.3 Z"
+          fill="#020617" stroke="#e5e7eb" stroke-width="1.1" />
+        <!-- cadenas -->
+        <rect x="13" y="14.5" width="6" height="4.5" rx="1"
+              fill="#0f172a" stroke="#e5e7eb" stroke-width="0.8" />
+        <path d="M14.8 14.5 V13.2
+                 Q14.8 11 16 11
+                 Q17.2 11 17.2 13.2 V14.5"
+              fill="none" stroke="#e5e7eb" stroke-width="0.8" />
+        <circle cx="16" cy="16.3" r="0.7" fill="#facc15" />
+        <!-- reflet animé pour la "transparence" -->
         <path
-          d="M10 9 Q16 7.5 22 9"
-          stroke="#facc15" stroke-width="1.2"
-          stroke-linecap="round">
+          d="M11 9.2 Q16 7.8 21 9.2"
+          stroke="#facc15" stroke-width="0.9" stroke-linecap="round">
           <animate
             attributeName="opacity"
             values="0;1;0"
-            dur="2.6s"
+            dur="2.4s"
             repeatCount="indefinite" />
           <animateTransform
             attributeName="transform"
             type="translate"
-            values="-2 0; 2 0; -2 0"
-            dur="2.6s"
+            values="-1 0; 1 0; -1 0"
+            dur="2.4s"
             repeatCount="indefinite" />
         </path>
       </svg>
@@ -709,45 +712,172 @@
 
   <!-- CONTACT -->
   <section id="contact" class="section contact" aria-labelledby="h-contact">
-    <div class="container">
-      <h2 id="h-contact">On démarre ? <span class="accent">J'ai hâte.</span></h2>
-      <p class="lead">Intervention à domicile sur rendez-vous exclusivement. Conseils & Accompagnement sur-mesure.</p>
-      <div class="contact__grid">
-  <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--phone" aria-hidden="true" focusable="false">
-        <use href="#ic-phone"></use>
-      </svg>
-    </span>
-    <strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong>
-    <small>Appel direct</small>
-  </a>
+  <div class="container">
+    <h2 id="h-contact">On démarre ? <span class="accent">J'ai hâte.</span></h2>
+    <p class="lead">Intervention à domicile & sur rendez-vous exclusivement, conseils & accompagnement sur-mesure.</p>
 
-  <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--mail" aria-hidden="true" focusable="false">
-        <use href="#ic-mail"></use>
-      </svg>
-    </span>
-    <strong>contact@informatique-cerdagne.fr</strong>
-    <small>Réponse rapide</small>
-  </a>
+    <div class="contact__grid">
+      <!-- Tél -->
+      <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet>
+        <div class="contact__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true">
+            <!-- combiné -->
+            <g>
+              <path
+                d="M18 16
+                   Q18 11 22 11
+                   L26 11
+                   Q30 11 30 16
+                   L30 22
+                   Q30 27 26 27
+                   L22 27
+                   Q18 27 18 22 Z"
+                fill="#ec4899" />
+              <path
+                d="M34 37
+                   Q34 32 38 32
+                   L42 32
+                   Q46 32 46 37
+                   L46 43
+                   Q46 48 42 48
+                   L38 48
+                   Q34 48 34 43 Z"
+                fill="#ec4899" />
+              <path
+                d="M26 24 L34 32"
+                stroke="#ec4899" stroke-width="6" stroke-linecap="round" />
+            </g>
 
-  <a class="cta-tile btn-magnet"
-     href="https://www.google.com/maps/search/?api=1&query=Cerdagne"
-     target="_blank" rel="noopener" data-magnet>
-    <span class="icon-wrapper">
-      <svg class="icon icon--pin" aria-hidden="true" focusable="false">
-        <use href="#ic-pin"></use>
-      </svg>
-    </span>
-    <strong>Cerdagne / Capcir</strong>
-    <small>Zone d’intervention</small>
-  </a>
-</div>
+            <!-- secousse du téléphone -->
+            <animateTransform
+              attributeName="transform"
+              type="rotate"
+              values="0 32 32; -7 32 32; 5 32 32; -4 32 32; 0 32 32"
+              dur="1.2s"
+              repeatCount="indefinite" />
 
+            <!-- ondes -->
+            <g stroke="#facc15" stroke-width="2.4" stroke-linecap="round" fill="none">
+              <path d="M46 17 Q52 23 54 30">
+                <animate
+                  attributeName="opacity"
+                  values="0;1;0"
+                  dur="1.2s"
+                  repeatCount="indefinite" />
+              </path>
+              <path d="M49 13 Q57 21 59 31" opacity="0.6">
+                <animate
+                  attributeName="opacity"
+                  values="0;0.8;0"
+                  dur="1.4s"
+                  repeatCount="indefinite" />
+              </path>
+            </g>
+          </svg>
+        </div>
+        <strong>06&nbsp;98&nbsp;99&nbsp;80&nbsp;01</strong>
+        <small>Appel direct</small>
+      </a>
+
+      <!-- Mail -->
+      <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet>
+        <div class="contact__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true">
+            <!-- enveloppe -->
+            <rect x="10" y="18" width="44" height="28" rx="6"
+                  fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+            <!-- contenu en dégradé -->
+            <defs>
+              <linearGradient id="mail-grad" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" stop-color="#ec4899" />
+                <stop offset="50%" stop-color="#f97316" />
+                <stop offset="100%" stop-color="#facc15" />
+              </linearGradient>
+            </defs>
+            <path d="M12 20 L32 34 L52 20" fill="url(#mail-grad)" />
+            <!-- rabat -->
+            <path id="mail-flap"
+                  d="M12 20 L32 34 L52 20 L52 18 L12 18 Z"
+                  fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+
+            <!-- anim rabat qui s'ouvre/ferme -->
+            <animateTransform
+              xlink:href="#mail-flap"
+              attributeName="transform"
+              type="rotate"
+              values="0 32 20; -18 32 20; 0 32 20"
+              dur="2.8s"
+              repeatCount="indefinite" />
+
+            <!-- petit badge "notification" -->
+            <circle cx="48" cy="20" r="3.5" fill="#ef4444">
+              <animate
+                attributeName="r"
+                values="3.5;4;3.5"
+                dur="1.8s"
+                repeatCount="indefinite" />
+            </circle>
+          </svg>
+        </div>
+        <strong>contact@informatique-cerdagne.fr</strong>
+        <small>Réponse rapide</small>
+      </a>
+
+      <!-- Zone d'intervention -->
+      <a class="cta-tile btn-magnet"
+         href="https://www.google.com/maps/search/?api=1&query=Cerdagne"
+         target="_blank" rel="noopener" data-magnet>
+        <div class="contact__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true">
+            <!-- trajet -->
+            <path id="route-path"
+                  d="M8 46 C18 38 28 40 36 34 C44 28 52 26 56 20"
+                  fill="none" stroke="#64748b" stroke-width="2"
+                  stroke-linecap="round" stroke-dasharray="4 5" />
+
+            <!-- point qui avance sur le trajet -->
+            <circle r="2.6" fill="#facc15">
+              <animateMotion
+                dur="3.2s"
+                repeatCount="indefinite"
+                rotate="auto">
+                <mpath xlink:href="#route-path" />
+              </animateMotion>
+            </circle>
+
+            <!-- pin -->
+            <g>
+              <path
+                d="M32 10
+                   C24 10 18 16.3 18 24
+                   C18 28.4 20.1 32.3 22.4 35.6
+                   C24.5 38.7 27 41.5 29.2 44.2
+                   C30.4 45.8 31.2 46.8 32 47.8
+                   C32.8 46.8 33.6 45.8 34.8 44.2
+                   C37 41.5 39.5 38.7 41.6 35.6
+                   C43.9 32.3 46 28.4 46 24
+                   C46 16.3 40 10 32 10 Z"
+                fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+              <circle cx="32" cy="24" r="5" fill="#ec4899" />
+            </g>
+
+            <!-- halo au sol -->
+            <ellipse cx="32" cy="51" rx="9" ry="3"
+                     fill="rgba(0,0,0,0.6)">
+              <animate
+                attributeName="opacity"
+                values="0.6;0.2;0.6"
+                dur="2.1s"
+                repeatCount="indefinite" />
+            </ellipse>
+          </svg>
+        </div>
+        <strong>Cerdagne / Capcir</strong>
+        <small>Zone d’intervention</small>
+      </a>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- FOOTER -->
   <footer class="footer">
