--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
 <!-- Sourire & pédagogie -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class=" ic-svg--bounce">
       <!-- petit tableau -->
       <rect x="4.5" y="7" width="8.5" height="5.2" rx="1.2"
             fill="#020617" stroke="#e5e7eb" stroke-width="0.7" />
@@ -332,7 +332,7 @@
 <!-- Ponctualité & fiabilité -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--pulse">
       <!-- cadran plus grand -->
       <circle cx="16" cy="16" r="9.5"
               fill="#020617" stroke="#e5e7eb" stroke-width="1.2" />
@@ -369,7 +369,7 @@
 <!-- Adaptabilité & clarté -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--wiggle">
       <!-- bulle de dialogue (clarté) -->
       <path
         d="M6 10.5
@@ -434,7 +434,7 @@
 <!-- Transparence & sécurité -->
 <li data-magnet>
   <span class="ic-badge">
-    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg">
+    <svg viewBox="0 0 32 32" aria-hidden="true" class="ic-svg ic-svg--pulse">
       <!-- corps du cadenas -->
       <rect x="10.5" y="14.5" width="11" height="7.5" rx="2"
             fill="#020617" stroke="#e5e7eb" stroke-width="1" />
@@ -761,7 +761,7 @@
     <div class="contact__grid">
       <!-- TUILE TÉLÉPHONE -->
 <a class="cta-tile btn-magnet" href="tel:+33698998001" data-magnet>
-  <div class="contact__icon">
+  <div class="contact__icon contact__icon--float">
     <svg viewBox="0 0 64 64" aria-hidden="true">
       <g id="phone" transform="translate(0,0)">
         <!-- combiné classique -->
@@ -827,7 +827,7 @@
 
 <!-- TUILE MAIL -->
 <a class="cta-tile btn-magnet" href="mailto:contact@informatique-cerdagne.fr" data-magnet>
-<div class="contact__icon">
+<div class="contact__icon contact__icon--float">
   <svg viewBox="0 0 64 64" aria-hidden="true">
     <defs>
       <linearGradient id="mail-grad-clean" x1="0%" y1="0%" x2="100%" y2="0%">
@@ -881,7 +881,7 @@
 <a class="cta-tile btn-magnet"
    href="https://www.google.com/maps/search/?api=1&query=Cerdagne"
    target="_blank" rel="noopener" data-magnet>
-<div class="contact__icon">
+<div class="contact__icon contact__icon--float">
   <svg viewBox="0 0 64 64" aria-hidden="true">
     <!-- cercles qui se propagent -->
     <circle cx="32" cy="38" r="4"
