--- a/index.html
+++ b/index.html
@@ -178,96 +178,126 @@
       <stop offset="100%" stop-color="#facc15" />
     </linearGradient>
 
-        <!-- 🔧 Réparation / optimisation -->
-    <symbol id="ic-service-repair" viewBox="0 0 64 64">
-      <g>
-        <rect x="10" y="18" width="30" height="20" rx="4"
-              fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-        <rect x="14" y="22" width="22" height="12" rx="2"
-              fill="#0f172a" />
-        <!-- clé plate -->
-        <g fill="none" stroke="#facc15" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-          <path d="M18 28 L26 20" />
-          <circle cx="18" cy="28" r="2.4" />
-          <path d="M26 20 L30 24" />
-        </g>
-      </g>
-    </symbol>
+    <!-- Icône générique : on travaille sur 32x32, la pastille .ic-badge fait déjà le cercle -->
 
-    <!-- 🛡 Sécurité / sauvegardes (réutilise le bouclier) -->
-    <symbol id="ic-service-security" viewBox="0 0 64 64">
-      <use href="#ic-shield" />
-    </symbol>
-
-    <!-- 📦 Installation / personnalisation -->
-    <symbol id="ic-service-setup" viewBox="0 0 64 64">
-      <rect x="10" y="16" width="34" height="22" rx="4"
-            fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-      <rect x="14" y="20" width="26" height="10" rx="2"
-            fill="#0f172a" />
-      <!-- curseur / slider -->
-      <line x1="16" y1="24" x2="32" y2="24"
-            stroke="#facc15" stroke-width="2" stroke-linecap="round" />
-      <circle cx="26" cy="24" r="2.2" fill="#ec4899" />
-    </symbol>
-
-    <!-- 💡 Conseil & achat -->
-    <symbol id="ic-service-advice" viewBox="0 0 64 64">
-      <!-- bulle -->
+    <!-- Dépannage & optimisation : clé plate + engrenage -->
+    <symbol id="ic-service-repair" viewBox="0 0 32 32">
+      <!-- engrenage plein -->
+      <circle cx="12" cy="12" r="5.5" fill="#0f172a" />
       <path
-        d="M14 20
-           Q14 14 21 14
-           H38
-           Q45 14 45 20
-           V28
-           Q45 34 38 34
-           H26
-           L21 38
-           V34
-           Q14 34 14 28 Z"
-        fill="#020617" stroke="#e5e7eb" stroke-width="2" />
+        d="M12 6.5
+           L13.4 7.1
+           L14.7 6.4
+           L16.1 7.8
+           L15.4 9.1
+           L16.1 10.5
+           L14.7 11.9
+           L13.4 11.2
+           L12 11.9
+           L10.6 11.2
+           L9.3 11.9
+           L7.9 10.5
+           L8.6 9.1
+           L7.9 7.8
+           L9.3 6.4
+           L10.6 7.1Z"
+        fill="#020617" stroke="#facc15" stroke-width="1.6" />
+      <circle cx="12" cy="12" r="2.1" fill="#facc15" />
+
+      <!-- clé -->
+      <path
+        d="M17 17 L22 22"
+        stroke="#ec4899" stroke-width="2.2" stroke-linecap="round" />
+      <circle cx="17" cy="17" r="2.2" fill="#ec4899" />
+    </symbol>
+
+    <!-- Sécurité & sauvegardes : bouclier + coche -->
+    <symbol id="ic-service-security" viewBox="0 0 32 32">
+      <path
+        d="M16 6 L9.5 8.5 V16
+           C9.5 20.5 12.4 24 16 25.8
+           C19.6 24 22.5 20.5 22.5 16
+           V8.5 Z"
+        fill="#020617" stroke="#facc15" stroke-width="1.8" />
       <!-- coche -->
-      <path d="M23 24 L28 29 L36 20"
-            stroke="#22c55e" stroke-width="2.3"
-            stroke-linecap="round" stroke-linejoin="round" />
-    </symbol>
-
-    <!-- 🖥 Programmation & visibilité -->
-    <symbol id="ic-service-dev" viewBox="0 0 64 64">
-      <rect x="10" y="16" width="38" height="24" rx="4"
-            fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-      <circle cx="14" cy="20" r="1.4" fill="#ef4444" />
-      <circle cx="18" cy="20" r="1.4" fill="#facc15" />
-      <circle cx="22" cy="20" r="1.4" fill="#22c55e" />
-      <!-- chevrons -->
-      <path d="M20 27 L16 30 L20 33"
-            stroke="#ec4899" stroke-width="1.7"
-            stroke-linecap="round" fill="none" />
-      <path d="M30 27 L34 30 L30 33"
-            stroke="#ec4899" stroke-width="1.7"
-            stroke-linecap="round" fill="none" />
-      <rect x="25" y="27" width="3" height="6" rx="1"
-            fill="#facc15" />
-    </symbol>
-
-    <!-- 📚 Formation & accompagnement -->
-    <symbol id="ic-service-coach" viewBox="0 0 64 64">
-      <!-- livre -->
       <path
-        d="M18 18 H40
-           Q46 18 46 24
-           V40
-           Q46 46 40 46
-           H18 Z"
-        fill="#020617" stroke="#e5e7eb" stroke-width="2" />
-      <line x1="22" y1="22" x2="36" y2="22"
+        d="M12.8 15.8 L15.2 18.3 L20 13.5"
+        stroke="#22c55e" stroke-width="2.2"
+        stroke-linecap="round" stroke-linejoin="round" />
+    </symbol>
+
+    <!-- Installations & personnalisation : écran + sliders -->
+    <symbol id="ic-service-setup" viewBox="0 0 32 32">
+      <rect x="6" y="8" width="20" height="13" rx="2.4"
+            fill="#020617" stroke="#e5e7eb" stroke-width="1.8" />
+      <rect x="8" y="10" width="16" height="7.5" rx="1.2"
+            fill="#0f172a" />
+      <!-- sliders bien gras -->
+      <line x1="10" y1="12" x2="20" y2="12"
             stroke="#facc15" stroke-width="2" stroke-linecap="round" />
-      <line x1="22" y1="26" x2="34" y2="26"
-            stroke="#e5e7eb" stroke-width="1.6" stroke-linecap="round" />
-      <!-- personnage stylisé -->
-      <circle cx="26" cy="33" r="2.2" fill="#ec4899" />
-      <path d="M24.5 36.5 Q26 38 27.5 36.5"
-            stroke="#ec4899" stroke-width="1.7" stroke-linecap="round" />
+      <circle cx="14" cy="12" r="2" fill="#facc15" />
+      <line x1="10" y1="15" x2="20" y2="15"
+            stroke="#ec4899" stroke-width="2" stroke-linecap="round" />
+      <circle cx="17" cy="15" r="2" fill="#ec4899" />
+    </symbol>
+
+    <!-- Conseils & achat : bulle pleine + coche -->
+    <symbol id="ic-service-advice" viewBox="0 0 32 32">
+      <path
+        d="M7 11
+           Q7 7.5 11 7.5
+           H21
+           Q25 7.5 25 11
+           V16
+           Q25 19.5 21 19.5
+           H15
+           L11.5 22.5
+           V19.5
+           Q7 19.5 7 16 Z"
+        fill="#020617" stroke="#e5e7eb" stroke-width="1.6" />
+      <path
+        d="M11 14.5 L14.5 18 L21 11.5"
+        stroke="#22c55e" stroke-width="2.1"
+        stroke-linecap="round" stroke-linejoin="round" />
+    </symbol>
+
+    <!-- Programmation & visibilité : fenêtre + chevrons -->
+    <symbol id="ic-service-dev" viewBox="0 0 32 32">
+      <rect x="5.5" y="8" width="21" height="14" rx="2.2"
+            fill="#020617" stroke="#e5e7eb" stroke-width="1.8" />
+      <!-- pastilles -->
+      <circle cx="9" y="10.3" r="1.1" fill="#ef4444" />
+      <circle cx="12" cy="10.3" r="1.1" fill="#facc15" />
+      <circle cx="15" cy="10.3" r="1.1" fill="#22c55e" />
+      <!-- chevrons gras -->
+      <path d="M13 14 L10 16 L13 18"
+            stroke="#ec4899" stroke-width="2"
+            stroke-linecap="round" fill="none" />
+      <path d="M19 14 L22 16 L19 18"
+            stroke="#ec4899" stroke-width="2"
+            stroke-linecap="round" fill="none" />
+      <rect x="15.3" y="14" width="2.4" height="4"
+            rx="0.9" fill="#facc15" />
+    </symbol>
+
+    <!-- Formation & accompagnement : livre + personne -->
+    <symbol id="ic-service-coach" viewBox="0 0 32 32">
+      <path
+        d="M8.5 9.5 H22.5
+           Q24.5 9.5 24.5 11.5
+           V22.5
+           Q24.5 24.5 22.5 24.5
+           H8.5 Z"
+        fill="#020617" stroke="#e5e7eb" stroke-width="1.8" />
+      <line x1="11" y1="12" x2="20" y2="12"
+            stroke="#facc15" stroke-width="2" stroke-linecap="round" />
+      <line x1="11" y1="14.5" x2="18" y2="14.5"
+            stroke="#e5e7eb" stroke-width="1.7" stroke-linecap="round" />
+
+      <!-- personnage au centre bas -->
+      <circle cx="14.5" cy="18.5" r="2.2" fill="#ec4899" />
+      <path d="M13.2 21.2 Q14.5 22.4 15.8 21.2"
+            stroke="#ec4899" stroke-width="1.8" stroke-linecap="round" />
     </symbol>
 
   </defs>
