--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
         Je suis persuadé de pouvoir trouver une solution. Chaque situation est unique, comme chaque village de Cerdagne. 😉
       </p>
 
-      <div class="grid-cards">
+      <div class="grid-cards grid-cards--prestations">
         <article class="service" data-magnet>
 <h3>
   <span class="ic-badge">
