--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
       <div class="hero__badge" data-magnet>Informatique Cerdagne</div>
 
       <h1>
-        Le service informatique à domicile <span class="accent">avec le sourire</span>
+        Le service informatique <br>à domicile <span class="accent">avec le sourire</span>
       </h1>
 
       <p class="hero__sub">
