--- a/index.html
+++ b/index.html
@@ -356,7 +356,11 @@
       ></path>
 
       <!-- Soleil -->
-      <g id="sun">
+      <g id="sun" 
+         data-sun-duration="25" 
+         data-sun-arc="15" 
+         data-sun-margin="120" 
+         data-offset-y="60">
         <g id="sunRays" stroke="#F7C600" stroke-width="10" stroke-linecap="round">
           <line x1="0" y1="-80" x2="0" y2="-120" />
           <line x1="0" y1="-80" x2="0" y2="-120" transform="rotate(30)" />
