--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
   <section id="avis" class="section avis" aria-labelledby="h-avis">
     <div class="container">
       <h2 id="h-avis" data-split>
-        Votre satisfaction : <span class="accent">ma plus grande récompense !</span>
+        Votre satisfaction : <span class="accent">ma plus grande récompense&nbsp; !</span>
       </h2>
 
       <div class="reviews__top">
