--- a/index.html
+++ b/index.html
@@ -325,6 +325,82 @@
       <a data-scrolllink href="#avis" data-magnet>Avis</a>
       <a data-scrolllink href="#contact" class="btn btn-primary btn-magnet" data-magnet>Contact</a>
     </div>
+
+    <!-- Mobile: bouton -->
+<button class="nav__burger" type="button" aria-label="Ouvrir le menu" aria-expanded="false" aria-controls="mnav">
+  <svg class="burger-ico" viewBox="0 0 24 24" aria-hidden="true">
+    <path class="burger-top" d="M4 7h16" />
+    <path class="burger-mid" d="M4 12h16" />
+    <path class="burger-bot" d="M4 17h16" />
+  </svg>
+</button>
+
+<!-- Mobile: overlay + sheet -->
+<div class="mnav" id="mnav" aria-hidden="true">
+  <div class="mnav__backdrop" data-close></div>
+
+  <aside class="mnav__sheet" role="dialog" aria-modal="true" aria-label="Menu">
+    <div class="mnav__handle" data-close aria-label="Fermer">
+      <span></span>
+    </div>
+
+    <div class="mnav__peek">
+      <div class="mnav__peek-pill">
+        <span class="mnav__dot"></span>
+        <span>Menu</span>
+        <span class="mnav__hint">glisse ↓ pour fermer</span>
+      </div>
+    </div>
+
+    <nav class="mnav__items" aria-label="Navigation mobile">
+      <a data-scrolllink href="#demarche" class="mnav__item" data-magnet>
+        <span class="mnav__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true"><use href="#ic-puzzle" /></svg>
+        </span>
+        <span class="mnav__label">Démarche</span>
+        <span class="mnav__chev">›</span>
+      </a>
+
+      <a data-scrolllink href="#prestations" class="mnav__item" data-magnet>
+        <span class="mnav__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true"><use href="#ic-service-repair" /></svg>
+        </span>
+        <span class="mnav__label">Prestations</span>
+        <span class="mnav__chev">›</span>
+      </a>
+
+      <a data-scrolllink href="#expertise" class="mnav__item" data-magnet>
+        <span class="mnav__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true"><use href="#ic-shield" /></svg>
+        </span>
+        <span class="mnav__label">Expertise</span>
+        <span class="mnav__chev">›</span>
+      </a>
+
+      <a data-scrolllink href="#avis" class="mnav__item" data-magnet>
+        <span class="mnav__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true"><use href="#ic-smile" /></svg>
+        </span>
+        <span class="mnav__label">Avis</span>
+        <span class="mnav__chev">›</span>
+      </a>
+
+      <a data-scrolllink href="#contact" class="mnav__item mnav__item--cta" data-magnet>
+        <span class="mnav__icon">
+          <svg viewBox="0 0 64 64" aria-hidden="true"><use href="#ic-phone" /></svg>
+        </span>
+        <span class="mnav__label">Contact</span>
+        <span class="mnav__chev">›</span>
+      </a>
+    </nav>
+
+    <div class="mnav__footer">
+      <div class="mnav__shine" aria-hidden="true"></div>
+      <p>Un petit swipe, et hop… ✨</p>
+    </div>
+  </aside>
+</div>
+
     <div class="progress" aria-hidden="true"><span></span></div>
   </nav>
 
