htaccess mentions-legales

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -432,7 +432,7 @@
         align-items: flex-start;
       }
     }
-    
+
     .legal-versions {
       margin-bottom: 2rem;
       padding: 1.2rem 1.5rem 1.35rem;
@@ -545,7 +545,7 @@
           <p class="hero-subtitle">
             Ce document unique regroupe les mentions légales, les Conditions Générales de Vente (CGV),
             ainsi que les informations relatives à la protection de vos données personnelles et aux cookies.<br>
-            <strong>Dernière mise à jour : 27/10/2025.</strong>
+            <strong>Dernière mise à jour : 21/12/2025.</strong>
           </p>
           <div class="hero-actions">
             <a
@@ -575,7 +575,7 @@
         </h2>
 
         <p class="legal-versions-intro">
-          Cette page <strong>mentions-legales.html</strong> affiche en permanence la version la plus récente.
+          Cette page affiche en permanence la version la plus récente.
           Les versions précédentes sont conservées au format <strong>PDF</strong> à des fins d’archivage et de preuve.
         </p>
 
