links mentions-legales

--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,7 @@
       </div>
       <nav class="footer__links" aria-label="Liens de pied de page">
         <a data-scrolllink href="#hero" data-magnet>Haut de page</a>
-        <a data-scrolllink href="/mentions-legales.pdf" data-magnet>Mentions légales</a>
+        <a data-scrolllink href="/mentions-legales" data-magnet>Mentions légales</a>
       </nav>
     </div>
   </footer>
