--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -549,9 +549,8 @@
           </p>
           <div class="hero-actions">
             <a
-              href="https://www.informatique-cerdagne.fr/mentions-legales.pdf"
+              href="/mentions-legales.pdf"
               class="btn-download"
-              download
             >
               Télécharger ces mentions au format PDF
               <span class="btn-download__note">(support durable)</span>
@@ -583,15 +582,15 @@
           <li class="current">
             <span class="version-tag">Version en vigueur</span>
             <strong>Dernière mise à jour : 21/12/2025</strong>
-            <a href="https://www.informatique-cerdagne.fr/mentions-legales.pdf" download>
-              Télécharger le PDF en vigueur
+            <a href="/mentions-legales.pdf">
+              Consulter le PDF en vigueur
             </a>
           </li>
 
           <li>
             <strong>Version du 27/10/2025</strong>
-            <a href="/archives/mentions-legales-2025-10-27.pdf" download>
-              Télécharger le PDF
+            <a href="/archives/mentions-legales-2025-10-27.pdf">
+              Consulter le PDF
             </a>
           </li>
         </ul>
