links mentions-legales

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -552,7 +552,7 @@
               href="/mentions-legales.pdf"
               class="btn-download"
             >
-              Télécharger ces mentions au format PDF
+              Consulter ces mentions au format PDF
               <span class="btn-download__note">(support durable)</span>
             </a>
           </div>
