improve prestations section

--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
           </ul>
         </article>
 
-        <article class="servic" data-magnet>
+        <article class="service" data-magnet>
 <h3>
   <span class="ic-badge">
     <svg viewBox="0 0 64 64" aria-hidden="true" class="ic-svg ic-svg--bounce">
