change home links in tarifs & mentions

--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -523,7 +523,7 @@
       <div class="brand">
         INFORMATIQUE <span>CERDAGNE</span>
       </div>
-      <a href="index.html" class="premium">
+      <a href="/" class="premium">
         ← Retour au site principal
       </a>
     </div>
