--- a/tarifs.html
+++ b/tarifs.html
@@ -407,7 +407,7 @@ h1 span.accent {
       <div class="brand">
         INFORMATIQUE <span>CERDAGNE</span>
       </div>
-      <a href="index.html" class="premium">
+      <a href="/" class="premium">
         Retour au site principal
       </a>
     </div>
