--- a/dev.html
+++ b/dev.html
@@ -1267,7 +1267,7 @@
             <li><strong>Mois sans Tabac</strong> : campagne nationale de santé publique : mois-sans-tabac.tabac-info-service.fr.</li>
           </ul>
           <p>Ces projets m’ont confronté à des réalités très variées : grand public, B2B, institutions, santé, industrie, logistique, internationalisation, performance, sécurité, expérience utilisateur, contraintes réglementaires.</p>
-          <p>Environnements techniques : Linux, Docker, Varnish, Git, Solr, Symfony, Doctrine, SQL, eZ Publish / eZ Platform, PHP, JavaScript, jQuery, ainsi que les méthodologies Agile / Scrum, avec des outils de pilotage comme JIRA.</p>
+          <p>Environnements techniques : Linux, Docker, Varnish, Git, Solr, Symfony, Doctrine, SQL, eZ Publish / eZ Platform, HTML/CSS, PHP, JavaScript, Wordpress, ainsi que les méthodologies Agile / Scrum, avec des outils de pilotage comme JIRA.</p>
         </div>
       </article>
 
