--- a/dev.html
+++ b/dev.html
@@ -1126,7 +1126,7 @@
         </div>
     
         <div class="block-body">
-          <p class="micro-copy">Tester avant de construire : le MVP.</p> 
+          <p class="micro-copy">Tester avant de construire.</p> 
           <p>Avant de créer une application complète ou un outil complexe, je propose souvent de passer par un&nbsp;<strong>MVP&nbsp;(Produit&nbsp;Minimum&nbsp;Viable)</strong>.</p>
           <p>Dit simplement : on construit d’abord la version utile, pas la version parfaite.</p>
           <p>Comme une maquette fonctionnelle :</p>
